--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/Angular_Dependencies/W3_CSS.css
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/Angular_Dependencies/W3_CSS.css
@@ -1727,3 +1727,197 @@ a {
 .w3-border-pale-blue, .w3-hover-border-pale-blue:hover {
     border-color: #e7ffff !important
 }
+
+.w3-metro-light-green {
+    color: #fff;
+    background-color: #99b433
+}
+
+.w3-metro-green {
+    color: #fff;
+    background-color: #00a300
+}
+
+.w3-metro-dark-green {
+    color: #fff;
+    background-color: #1e7145
+}
+
+.w3-metro-magenta {
+    color: #fff;
+    background-color: #ff0097
+}
+
+.w3-metro-light-purple {
+    color: #fff;
+    background-color: #9f00a7
+}
+
+.w3-metro-purple {
+    color: #fff;
+    background-color: #7e3878
+}
+
+.w3-metro-dark-purple {
+    color: #fff;
+    background-color: #603cba
+}
+
+.w3-metro-darken {
+    color: #fff;
+    background-color: #1d1d1d
+}
+
+.w3-metro-teal {
+    color: #fff;
+    background-color: #00aba9
+}
+
+.w3-metro-light-blue {
+    color: #000;
+    background-color: #eff4ff
+}
+
+.w3-metro-blue {
+    color: #fff;
+    background-color: #2d89ef
+}
+
+.w3-metro-dark-blue {
+    color: #fff;
+    background-color: #2b5797
+}
+
+.w3-metro-yellow {
+    color: #fff;
+    background-color: #ffc40d
+}
+
+.w3-metro-orange {
+    color: #fff;
+    background-color: #e3a21a
+}
+
+.w3-metro-dark-orange {
+    color: #fff;
+    background-color: #da532c
+}
+
+.w3-metro-red {
+    color: #fff;
+    background-color: #ee1111
+}
+
+.w3-metro-dark-red {
+    color: #fff;
+    background-color: #b91d47
+}
+.w3-win8-lime {
+    color: #fff;
+    background-color: #a4c400
+}
+
+.w3-win8-green {
+    color: #fff;
+    background-color: #60a917
+}
+
+.w3-win8-emerald {
+    color: #fff;
+    background-color: #008a00
+}
+
+.w3-win8-teal {
+    color: #fff;
+    background-color: #00aba9
+}
+
+.w3-win8-cyan {
+    color: #fff;
+    background-color: #1ba1e2
+}
+
+.w3-win8-blue {
+    color: #fff;
+    background-color: #3e65ff
+}
+
+.w3-win8-cobalt {
+    color: #fff;
+    background-color: #0050ef
+}
+
+.w3-win8-indigo {
+    color: #fff;
+    background-color: #6a00ff
+}
+
+.w3-win8-violet {
+    color: #fff;
+    background-color: #aa00ff
+}
+
+.w3-win8-pink {
+    color: #fff;
+    background-color: #f472d0
+}
+
+.w3-win8-magenta {
+    color: #fff;
+    background-color: #d80073
+}
+
+.w3-win8-crimson {
+    color: #fff;
+    background-color: #a20025
+}
+
+.w3-win8-red {
+    color: #fff;
+    background-color: #e51400
+}
+
+.w3-win8-orange {
+    color: #fff;
+    background-color: #fa6800
+}
+
+.w3-win8-amber {
+    color: #fff;
+    background-color: #f0a30a
+}
+
+.w3-win8-yellow {
+    color: #fff;
+    background-color: #e3c800
+}
+
+.w3-win8-brown {
+    color: #fff;
+    background-color: #825a2c
+}
+
+.w3-win8-olive {
+    color: #fff;
+    background-color: #6d8764
+}
+
+.w3-win8-steel {
+    color: #fff;
+    background-color: #647687
+}
+
+.w3-win8-mauve {
+    color: #fff;
+    background-color: #76608a
+}
+
+.w3-win8-taupe {
+    color: #fff;
+    background-color: #87794e
+}
+
+.w3-win8-sienna {
+    color: #fff;
+    background-color: #a0522d
+}
