--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/StyleSheet.css
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/StyleSheet.css
@@ -6,14 +6,14 @@
 
 @media (min-width: 1000px) {
 
-    #pending {
+    #pending,#status {
         width: 700px;
         margin-left: 211px;
     }
 }
 @media (min-width: 990px) and (max-width:1005px) {
 
-    #pending {
+    #pending, #status {
         width: 700px;
         margin-left: 20%;
     }
