--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
@@ -1,24 +1,48 @@
 ﻿
-    <div class="w3-sidebar w3-bar-block w3-hide-small w3-hide-medium w3-quarter w3-border" style="position:relative;right:0;">
-        <form class="w3-bar-item" ng-controller="searchController">
-            <div>
-                <h4 class="w3-bar-item">Where would you like to travel?</h4>
-                <select class="w3-bar-item w3-select w3-border-bottom" ng-disabled="errorMessageDisplay" ng-model="searchCountryID" required id="countrySelect">
-                    <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
-                </select>
-            </div>
-            <div>
-                <div><h5 class="w3-bar-item">Check In:</h5><input class="w3-bar-item w3-input w3-border-bottom" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" /></div>
-                <div><h5 class="w3-bar-item">Check Out:</h5><input class="w3-bar-item w3-input w3-border-bottom" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" /></div>
-            </div>
-            <div>
-                <h4 class="w3-bar-item ">Guests:</h4> <select class="w3-bar-item w3-select w3-border-bottom" ng-model="searchGuests" ng-disabled="errorMessageDisplay">
-                    <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
-                </select>
-            </div><br />
-            <a class="w3-bar-item w3-button w3-purple w3-round" ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</a>
-        </form>
-    </div>
+<div class="w3-sidebar w3-bar-block w3-hide-small w3-hide-medium w3-quarter w3-border" style="position:relative;right:0;">
+    <form class="w3-bar-item" ng-controller="searchController">
+        <div>
+            <h4 class="w3-bar-item">Where would you like to travel?</h4>
+            <select class="w3-bar-item w3-select w3-border-bottom" ng-disabled="errorMessageDisplay" ng-model="searchCountryID" required id="countrySelect">
+                <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
+            </select>
+        </div>
+        <div>
+            <div><h5 class="w3-bar-item">Check In:</h5><input class="w3-bar-item w3-input w3-border-bottom" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" /></div>
+            <div><h5 class="w3-bar-item">Check Out:</h5><input class="w3-bar-item w3-input w3-border-bottom" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" /></div>
+        </div>
+        <div>
+            <h4 class="w3-bar-item ">Guests:</h4> <select class="w3-bar-item w3-select w3-border-bottom" ng-model="searchGuests" ng-disabled="errorMessageDisplay">
+                <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
+            </select>
+        </div><br />
+        <a class="w3-bar-item w3-button w3-purple w3-round" ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</a>
+    </form>
+</div>
+
+<div style="width:100%;" class="w3-hide-large w3-mobile">
+
+
+    <form style="display:none;" id="mySidebar" class="w3-bar-item" ng-controller="searchController">
+        <button ng-click="closeTopBar()" class="w3-red w3-mobile w3-button w3-large">Close &times;</button>
+        <div>
+            <h4 class=" w3-mobile">Where would you like to travel?</h4>
+            <select class=" w3-mobile w3-select" ng-model="searchCountryID" required>
+                <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
+            </select>
+        </div>
+        <div>
+            <div><h5 class=" w3-mobile">Check In:</h5><input class="w3-bar-item w3-mobile w3-input w3-border-bottom" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" /></div>
+            <div><h5 class=" w3-mobile">Check Out:</h5><input class="w3-bar-item w3-mobile  w3-input w3-border-bottom" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" /></div>
+        </div>
+        <div>
+            <h4 class="w3-mobile">Guests:</h4> <select class="w3-bar-item w3-select w3-mobile  w3-border-bottom" ng-model="searchGuests" ng-disabled="errorMessageDisplay">
+                <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
+            </select>
+        </div><br />
+        <div style="cursor:pointer" class=" w3-purple w3-round w3-mobile w3-padding-16 w3-center " ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</div>
+    </form>
+</div>
 
 <div class="w3-mobile" style="width:100%;display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;align-items:center;" id="main">
 
