--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserBar/Template/Register.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserBar/Template/Register.html
@@ -2,23 +2,27 @@
 <center style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
     <form class="w3-content w3-mobile w3-cell  w3-animate-bottom w3-round" style="width:100%;">
         <h1>Register</h1><br />
-        <h6>User Name:</h6><input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" maxlength="10" type="text" required ng-model="$parent.newUserName" />
+        <h6>User Name:</h6><input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" maxlength="10" type="text" required ng-model="$parent.newUserName" />
         <br />
-        <h6>Password:</h6><input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" maxlength="8" type="password" required ng-model="$parent.newPassword" /><br />
+        <h6>Password:</h6><input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" maxlength="10" type="password" required ng-model="$parent.newPassword" /><br />
         <br />
         <h6> Email:</h6><input class="w3-input w3-mobile" required maxlength="30" style="width:100%;max-width:244.391px;" type="email" ng-model="$parent.newEmail" /><br />
         <h6>Country:</h6> <select class="w3-select w3-mobile" required style="width:100%;max-width:244.391px;" ng-model="$parent.newCountryID" id="countrySelect">
             <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
         </select>
-        <h6>First Name:</h6><input class="w3-input w3-mobile"  required maxlength="10" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.newFirstName" /><br />
+        <h6>First Name:</h6><input class="w3-input w3-mobile" required maxlength="10" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.newFirstName" /><br />
         <h6>Last Name:</h6><input class="w3-input w3-mobile" required maxlength="10" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.newLastName" /><br />
         <h6> Gender:</h6><select class="w3-select w3-mobile" style="width:100%;max-width:244.391px;" required ng-model="$parent.newGender">
             <option value="true">Male</option>
             <option value="false">Female</option>
         </select>
-        <h6>Address:</h6><input class="w3-input w3-mobile"  required maxlength="30" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.newAddress" /><br />
-        <h6>Phone Number:</h6><input class="w3-input w3-mobile"  required maxlength="15" style="width:100%;max-width:244.391px;" type="tel" ng-model="$parent.newPhoneNumber" /><br />
+        <h6>Address:</h6><input class="w3-input w3-mobile" required maxlength="30" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.newAddress" /><br />
+        <h6>Phone Number:</h6><input class="w3-input w3-mobile" required maxlength="15" style="width:100%;max-width:244.391px;" type="tel" ng-model="$parent.newPhoneNumber" /><br />
         <br />
         <button class="w3-button w3-purple w3-round w3-hover-blue" ng-click="signUp()">Register</button>
+        <div ng-show="errorMessage" class="w3-panel w3-red">
+            <span class="w3-right w3-button w3-hover-none" ng-click="errorMessage = false">&times;</span>
+            <h3>Error as occure in the middle of your regiser please try again and check if the values matches the criterion</h3>
+        </div>
     </form>
 </center>
