--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserBar/Template/Register.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserBar/Template/Register.html
@@ -2,6 +2,10 @@
 <center style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
     <form class="w3-content w3-mobile w3-cell  w3-animate-bottom w3-round" style="width:100%;">
         <h1>Register</h1><br />
+        <div style="width:100%;height:100%;max-width:200px;max-height:200px" class="w3-mobile w3-border">
+            <img style="width:100%;height:100%;max-width:200px;max-height:200px" class="w3-mobile w3-border" src="{{newProfilePic}}" />
+        </div>
+        <input type="file" ng-file-select="onFileSelect($files)" ng-model="newProfilePic">
         <h6>User Name:</h6><input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" maxlength="10" type="text" required ng-model="$parent.newUserName" />
         <br />
         <h6>Password:</h6><input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" maxlength="10" type="password" required ng-model="$parent.newPassword" /><br />
@@ -23,6 +27,6 @@
         <div ng-show="errorMessage" class="w3-panel w3-red">
             <span class="w3-right w3-button w3-hover-none" ng-click="errorMessage = false">&times;</span>
             <h3>Error as occure in the middle of your regiser please try again and check if the values matches the criterion</h3>
-        </div>
+        </div>-->
     </form>
 </center>
