--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/EditAccount.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/EditAccount.html
@@ -2,7 +2,15 @@
 <center class="w3-animate-bottom" style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
     <form class="w3-content w3-mobile w3-cell  w3-animate-bottom w3-round" style="width:100%;">
         <br /><h3>Edit Account </h3>
-        <h6>First Name:</h6> <input maxlength="10" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.editFirstName" placeholder="{{userDetails.firstName}}" /><br />
+        <div class="w3-mobile">
+            <div style="width:100%;height:100%;max-width:200px;max-height:200px" class="w3-mobile w3-border">
+                <img style="width:100%;height:100%;max-width:200px;max-height:200px" class="w3-mobile w3-border" src="{{newProfilePic}}" />
+            </div>
+            <input  type="file" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" ng-click="newImage =true" ng-file-select="onFileSelect($files)" ng-model="newProfilePic">
+            <button class="w3-button w3-mobile w3-round w3-green" ng-show="newImage" ng-click="editProfileImage()">Save Picture</button>
+            <button class="w3-button w3-mobile w3-round w3-red" ng-show="newImage" ng-click="discardPicChange()">Discard</button>
+        </div>
+        <h6>First Name:</h6> <input autofocus maxlength="10" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" type="text" ng-model="$parent.editFirstName" placeholder="{{userDetails.firstName}}" /><br />
         <h6>Last Name:</h6> <input maxlength="10" type="text" ng-model="$parent.editLastName" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" placeholder="{{userDetails.lastName}}" /><br />
         <h6>Country:</h6> <select ng-model="$parent.editCountryID" class="w3-select w3-mobile" style="width:100%;max-width:244.391px;" required id="countrySelect">
             <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
