--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/ProfileParent.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/ProfileParent.html
@@ -2,7 +2,7 @@
 
     <div class="w3-hide-large w3-mobile w3-purple">
         <div style="display:none;"id="mySidebar">
-            <div class=" w3-mobile w3-button w3-hover-blue w3-purple" style="width:100%;max-width:320px"> <img style="width:50%"  src="/ApartrentPhotos/Bath_Available.jpg" class="w3-circle  w3-padding-16" /></div>
+            <div class="w3-mobile w3-button w3-hover-blue w3-purple"> <img  src="{{userDetails.profileImage}}" style="max-height:130px;max-width:270px;" class="w3-circle" /></div>
             <div class=" w3-mobile w3-button w3-hover-blue w3-purple" ui-sref="ProfileParent.EditAccount({userName:userDetails.userName})">Edit account</div>
             <div class="w3-mobile w3-button w3-hover-blue w3-purple" ui-sref="ProfileParent.UserReviews({userName:userDetails.userName})">My Reviews</div>
             <div class="w3-mobile w3-button w3-hover-blue w3-purple" ui-sref="ProfileParent.UserOrders({userName:userDetails.userName})">View purchses</div>
@@ -15,7 +15,7 @@
 
 
     <div class="w3-sidebar w3-bar-block w3-purple w3-animate-left w3-hide-small w3-hide-medium">
-      <img style="width:70px;height:70px"  src="/ApartrentPhotos/Bath_Available.jpg" class="w3-circle" />
+      <img style="width:100%;height:100%;max-width:200px;max-height:200px"  src="{{userDetails.profileImage}}" class="w3-circle" />
         <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-hover-blue w3-border-black w3-padding-16" ui-sref="ProfileParent.EditAccount({userName:userDetails.userName})">Edit account</a>
         <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-hover-blue w3-border-black w3-padding-16" ui-sref="ProfileParent.UserReviews({userName:userDetails.userName})">My Reviews</a>
         <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-hover-blue w3-border-black w3-padding-16" ui-sref="ProfileParent.UserOrders({userName:userDetails.userName})">View purchses</a>
